# rl_embedded_os

./: .gitignore  README.md  launch_vm.sh  run_in_vm.sh  setup.sh
rl_file_agent/: Cargo.toml  README.md  build_and_run.sh  simulate_user.py
rl_file_agent/ebpf/: Cargo.toml
rl_file_agent/ebpf/src/: lib.rs  main.rs
rl_file_agent/user/: Cargo.toml
rl_file_agent/user/src/: main.rs
rl_process_agent/: Cargo.toml  build_and_run.sh  simulate_processes.py
rl_process_agent/behaviors/: backup.py  browser.py  compiler.py  editor.py  monitor.py
rl_process_agent/ebpf/: Cargo.toml
rl_process_agent/ebpf/src/: lib.rs
rl_process_agent/user/: Cargo.toml
rl_process_agent/user/src/: main.rs
