[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", package = "aya-bpf", rev = "2d3fc4d", default-features = false }

[build-dependencies]
aya-tool = { git = "https://github.com/aya-rs/aya", package = "aya-tool", rev = "2d3fc4d" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true