[package]
name = "ebpf"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aya-bpf = { path = "/home/nielok/aya/aya/ebpf/aya-ebpf" }

[build-dependencies]
aya-tool = { path = "/home/nielok/aya/aya/aya-tool" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true